--- a/board_firm.html
+++ b/board_firm.html
@@ -38,7 +38,7 @@
         <div class='rTagBox'>
           <div class='tagBox'>
             <a class='tag' href="menu.html">內網首頁</a>
-            <a class='tag' href="board_template.html">詢價範本管理</a>
+            <a class='tag' href="board_firm.html">廠商管理</a>
           </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
               <a href="board_forget_pw.html">取回密碼</a>
               <a href="board_country.html">國別管理</a>
               <a href="board_phrase.html">片語管理</a>
-              <a class='l-menu-active' href="board_template.html">詢價範本管理</a>
+              <a href="board_template.html">詢價範本管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
@@ -78,9 +78,9 @@
             <div class="m-smenu">
               <a href="board_product_category.html">產品類別管理</a>
               <a href="board_product.html">產品管理</a>
-              <a href="board_staff.html">人員管理</a>
+              <a href="board_staff.html" >人員管理</a>
               <a href="board_client.html">客戶管理</a>
-              <a href="board_firm.html">廠商管理</a>
+              <a class='l-menu-active' href="board_firm.html">廠商管理</a>
               <a href="board_firm_staff.html">廠商聯絡人管理</a>
             </div>
 
@@ -92,50 +92,16 @@
         <div class='block-r'>
           <div class='centBoxs'>
             <div class='boxsFull'>
-              <p class="t-blue-20 p-d-30">詢價範本管理</p>
-              <a class='btn-outline-blue icon-add order-r' href="board_template_edit.html">&nbsp;新增範本</a>
-            </div>
-
-            <div class='boxsFull m-d-25'>
-              <p class='t-r-15 text-l p-d-10'>所屬單位</p>
-              <div class="select-style">
-                <select>
-                  <option value="">請選擇</option>
-                  <option value="">所屬單位01</option>
-                  <option value="">所屬單位02</option>
-                  <option value="">所屬單位03</option>
-                </select>
-              </div>
+              <p class="t-blue-20 p-d-30">廠商管理</p>
+              <a class='btn-outline-blue icon-add order-r' href="board_firm_edit.html">&nbsp;新增廠商</a>
             </div>
 
             <div class='boxsFull'>
-              <div class='boxs30'>
-                <p class='t-r-15 text-l p-d-10'>所屬業務</p>
+              <p class='t-r-15 text-l p-d-10'>關鍵字</p>
                 <label>
-                  <input class='input-f' type="" name="" placeholder="請輸入">
+                  <input class='input-f in-w-40' type="" name="" placeholder="請輸入關鍵字">
                 </label>
-              </div>
-              <div class='boxs30'>
-                <p class='t-r-15 text-l p-d-10'>類別</p>
-                <div class="select-style">
-                  <select>
-                    <option value="">請選擇</option>
-                    <option value="">類別01</option>
-                    <option value="">類別02</option>
-                    <option value="">類別03</option>
-                  </select>
-                </div>
-              </div>
-              <div class='boxs30'>
-                <p class='t-r-15 text-l p-d-10'>關鍵字</p>
-                <label>
-                  <input class='input-f' type="" name="" placeholder="請輸入">
-                </label>
-              </div>
-
-              <div class='boxsFull m-td-25'>
-                <a class='btn-half-blue icon-search order-r' href="index.html">&nbsp;搜尋</a>
-              </div>
+              <a class='btn-half-blue icon-search' href="index.html">&nbsp;搜尋</a>
             </div>
 
             <!-- 按下搜尋後會出現的元件。開始 -->
@@ -148,87 +114,108 @@
 
             <div class='boxsFull'>
               <div class='table-header'>
+                <p class='table-box40'>廠商名稱</p>
+                <p class='table-box20'>廠商簡稱</p>
                 <p class='table-box20'>類&nbsp;別</p>
-                <p class='table-box60'>範本主題</p>
                 <p class='table-box20'>操&nbsp;作</p>
               </div>
+              <!-- 01 -->
               <div class='table-body'>
-                <p class='table-box20'>類別01</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
+              <!-- 02 -->
               <div class='table-body'>
-                <p class='table-box20'>類別02</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
+              <!-- 03 -->
               <div class='table-body'>
-                <p class='table-box20'>類別03</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
+              <!-- 04 -->
               <div class='table-body'>
-                <p class='table-box20'>類別04</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
+              <!-- 05 -->
               <div class='table-body'>
-                <p class='table-box20'>類別05</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
+              <!-- 06 -->
               <div class='table-body'>
-                <p class='table-box20'>類別06</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
+              <!-- 07 -->
               <div class='table-body'>
-                <p class='table-box20'>類別07</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
+              <!-- 08 -->
               <div class='table-body'>
-                <p class='table-box20'>類別08</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
+              <!-- 09 -->
               <div class='table-body'>
-                <p class='table-box20'>類別09</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
+              <!-- 10 -->
               <div class='table-body'>
-                <p class='table-box20'>類別10</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box40 text-l'>好有錢股份有限公司</p>
+                <p class='table-box20'>好有錢</p>
+                <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash m-l-10'></button>
                 </p>
               </div>
