--- a/board_template_edit2.html
+++ b/board_template_edit2.html
@@ -58,30 +58,31 @@
 
             <span class="m-menu-t">一般業務</span>
             <div class="m-smenu">
-              <a href="board_price_list.html" >詢價列表</a>
-              <a href="board_sales_report.html" >業務報表</a>
+              <a href="board_price_list.html">詢價列表</a>
+              <a href="board_sales_report.html">業務報表</a>
             </div>
 
             <span class="m-menu-t">資深業務</span>
             <div class="m-smenu">
-              <a href="board_price_list_v2.html" >詢價列表</a>
-              <a href="board_sales_report_v2.html" >業務報表</a>
+              <a href="board_price_list.html">詢價列表</a>
+              <a href="board_sales_report.html">業務報表</a>
             </div>
 
             <span class="m-menu-t">採購</span>
             <div class="m-smenu">
-              <a href="board_purchase_list.html" >採購取件</a>
-              <a href="board_purchase_report.html" >採購報表</a>
+              <a href="board_purchase_list.html">採購取件</a>
+              <a href="board_purchase_note.html">採購筆記</a>
+              <a href="board_purchase_report.html">採購報表</a>
             </div>
 
             <span class="m-menu-t">產品、人員管理</span>
             <div class="m-smenu">
-              <a href="board_product_category.html" >產品類別管理</a>
-              <a href="board_product.html" >產品管理</a>
-              <a href="board_staff.html" >人員管理</a>
+              <a href="board_product_category.html">產品類別管理</a>
+              <a href="board_product.html">產品管理</a>
+              <a href="board_staff.html">人員管理</a>
               <a href="board_client.html" >客戶管理</a>
-              <a href="board_firm.html" >廠商管理</a>
-              <a href="board_firm_staff.htm" >廠商聯絡人管理</a>
+              <a href="board_firm.html">廠商管理</a>
+              <a href="board_firm_staff.html">廠商聯絡人管理</a>
             </div>
 
             <!-- <a class='db2' href="">第一層選單</a> -->
