--- a/board_country_edit.html
+++ b/board_country_edit.html
@@ -50,38 +50,39 @@
           <div class='block-l-menuBox'>
             <span class="m-menu-t">系統管理者</span>
             <div class="m-smenu">
-              <a href="board_forget_pw.html" >取回密碼</a>
+              <a href="board_forget_pw.html">取回密碼</a>
               <a class='l-menu-active' href="board_country.html">國別管理</a>
-              <a href="board_phrase.html" >片語管理</a>
-              <a href="board_template.html" >詢價範本管理</a>
+              <a href="board_phrase.html">片語管理</a>
+              <a href="board_template.html">詢價範本管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
             <div class="m-smenu">
-              <a href="board_price_list.html" >詢價列表</a>
-              <a href="board_sales_report.html" >業務報表</a>
+              <a href="board_price_list.html">詢價列表</a>
+              <a href="board_sales_report.html">業務報表</a>
             </div>
 
             <span class="m-menu-t">資深業務</span>
             <div class="m-smenu">
-              <a href="board_price_list_v2.html" >詢價列表</a>
-              <a href="board_sales_report_v2.html" >業務報表</a>
+              <a href="board_price_list.html">詢價列表</a>
+              <a href="board_sales_report.html">業務報表</a>
             </div>
 
             <span class="m-menu-t">採購</span>
             <div class="m-smenu">
-              <a href="board_purchase_list.html" >採購取件</a>
-              <a href="board_purchase_report.html" >採購報表</a>
+              <a href="board_purchase_list.html">採購取件</a>
+              <a href="board_purchase_note.html">採購筆記</a>
+              <a href="board_purchase_report.html">採購報表</a>
             </div>
 
             <span class="m-menu-t">產品、人員管理</span>
             <div class="m-smenu">
-              <a href="board_product_category.html" >產品類別管理</a>
-              <a href="board_product.html" >產品管理</a>
-              <a href="board_staff.html" >人員管理</a>
-              <a href="board_client.html" >客戶管理</a>
-              <a href="board_firm.html" >廠商管理</a>
-              <a href="board_firm_staff.htm" >廠商聯絡人管理</a>
+              <a href="board_product_category.html">產品類別管理</a>
+              <a href="board_product.html">產品管理</a>
+              <a href="board_staff.html">人員管理</a>
+              <a href="board_client.html">客戶管理</a>
+              <a href="board_firm.html">廠商管理</a>
+              <a href="board_firm_staff.html">廠商聯絡人管理</a>
             </div>
 
             <!-- <a class='db2' href="">第一層選單</a> -->
@@ -95,7 +96,7 @@
               <p class="t-blue-20 p-d-30">新增國別</p>
             </div>
 
-            <div class='boxsFull'>
+            <div class='boxsFull m-d-25'>
               <div class='boxs30'>
                 <p class='t-r-15 text-l p-d-10'>國別中文</p>
                 <label>
@@ -114,7 +115,9 @@
                   <input class='input-f' type="" name="" placeholder="請輸入">
                 </label>
               </div>
+            </div>
 
+            <div class='boxsFull'>
               <div class='boxsFull m-td-25'>
                 <p class='t-r-15 text-l p-d-10'>備註</p>
                 <textarea class='input-f' name="mytext" rows="6" cols="40" placeholder="請輸入" required></textarea>
