--- a/board_purchase_note_edit2.html
+++ b/board_purchase_note_edit2.html
@@ -38,8 +38,8 @@
         <div class='rTagBox'>
           <div class='tagBox'>
             <a class='tag' href="menu.html">內網首頁</a>
-            <a class='tag' href="board_phrase.html">片語管理</a>
-            <a class='tag'>編輯片語範本</a>
+            <a class='tag' href="board_purchase_note.html">採購筆記</a>
+            <a class='tag'>編輯採購筆記</a>
           </div>
         </div>
       </div>
@@ -50,10 +50,10 @@
           <div class='block-l-menuBox'>
             <span class="m-menu-t">系統管理者</span>
             <div class="m-smenu">
-              <a href="board_forget_pw.html" >取回密碼</a>
+              <a href="board_forget_pw.html">取回密碼</a>
               <a href="board_country.html">國別管理</a>
-              <a class='l-menu-active' href="board_phrase.html">片語管理</a>
-              <a href="board_template.html" >詢價範本管理</a>
+              <a href="board_phrase.html">片語管理</a>
+              <a href="board_template.html">詢價範本管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
@@ -71,7 +71,7 @@
             <span class="m-menu-t">採購</span>
             <div class="m-smenu">
               <a href="board_purchase_list.html">採購取件</a>
-              <a href="board_purchase_note.html">採購筆記</a>
+              <a class='l-menu-active' href="board_purchase_note.html">採購筆記</a>
               <a href="board_purchase_report.html">採購報表</a>
             </div>
 
@@ -93,21 +93,39 @@
         <div class='block-r'>
           <div class='centBoxs'>
             <div class='boxsFull'>
-              <p class="t-blue-20 p-d-30">編輯片語範本</p>
+              <p class="t-blue-20 p-d-30">編輯採購筆記</p>
+            </div>
+
+            <div class='boxsFull m-d-25'>
+              <div class='boxs30'>
+                <p class='t-r-15 text-l p-d-10'>廠商</p>
+                <div class="select-style">
+                  <select>
+                    <option value="">請選擇</option>
+                    <option value="">產品類別01</option>
+                    <option value="">產品類別02</option>
+                    <option value="">產品類別03</option>
+                  </select>
+                </div>
+              </div>
+              <div class='boxs30'>
+                <p class='t-r-15 text-l p-d-10'>客戶簡碼</p>
+                <label>
+                  <input class='input-f' type="" name="" placeholder="請輸入">
+                </label>
+              </div>
+            </div>
+
+            <div class='boxsFull m-d-25'>
+              <p class='t-r-15 text-l p-d-10'>筆記主旨</p>
+              <label>
+                <input class='input-f' type="" name="" placeholder="請輸入">
+              </label>
             </div>
 
             <div class='boxsFull'>
-              <div class='boxsFull m-td-25'>
-                <p class='t-r-15 text-l p-d-10'>片語標題</p>
-                <label>
-                  <input class='input-f' type="" name="" placeholder="片語標題片語標題片語標題片語標題">
-                </label>
-              </div>
-
-              <div class='boxsFull m-td-25'>
-                <p class='t-r-15 text-l p-d-10'>片語內容</p>
-                <textarea class='input-f' name="mytext" rows="6" cols="40" placeholder="片語內容片語內容片語內容片語內容" required></textarea>
-              </div>
+              <p class='t-r-15 text-l p-d-10'>筆記內容</p>
+              <textarea class='input-f' name="mytext" rows="6" cols="40" placeholder="請輸入" required></textarea>
             </div>
 
             <div class='boxsFull m-td-25'>
