--- a/board_price_edit.html
+++ b/board_price_edit.html
@@ -228,7 +228,19 @@
                 </div>
               </div>
 
-              <div class='boxsYellow'></div>
+              <!-- 選擇商品 -->
+              <div class="boxsFull m-d-20">
+                <div class="price_boxs">選擇商品</div>
+                <div class="price_boxsC">dddddddddddddddddd</div>
+                <div class="price_boxsB"></div>
+              </div>
+
+              <!-- 媒合廠商 -->
+              <div class="boxsFull">
+                <div class="price_boxs">媒合廠商</div>
+                <div class="price_boxsC">dddddddddddddddddd</div>
+                <div class="price_boxsB"></div>
+              </div>
             </div>
 
             <div class="boxsYellow m-td-25">
